--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,11 @@ edition = "2024"
 [dependencies]
 embedded-hal-async = { version = "1.0.0", optional = true}
 embedded-hal = {version = "1.0.0", optional = true}
+embassy-time = "0.4.0"
 async-trait = "0.1.89"
+
+[dev-dependencies]
+tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}
 
 [features]
 default = ["async"]
