--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ async-trait = "0.1.89"
 
 [dev-dependencies]
 tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}
+smallvec = "1.15.1"
 
 [features]
 default = ["async"]
