--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,10 +8,11 @@ embedded-hal-async = { version = "1.0.0", optional = true}
 embedded-hal = {version = "1.0.0", optional = true}
 embassy-time = "0.4.0"
 async-trait = "0.1.89"
+heapless = "0.8.0"
 
 [dev-dependencies]
 tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}
-smallvec = "1.15.1"
+tokio-test = "0.4.4"
 
 [features]
 default = ["async"]
