--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ embedded-hal-async = { version = "1.0.0", optional = true}
 embedded-hal = {version = "1.0.0", optional = true}
 embassy-time = "0.4.0"
 heapless = "0.8.0"
+uom = { version= "0.37.0", default-features = false, features = ["f32", "si"]}
 
 [dev-dependencies]
 tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}
@@ -22,3 +23,4 @@ tokio-test = "0.4.4"
 default = ["async"]
 async = ["dep:embedded-hal-async"]
 sync = ["dep:embedded-hal"]
+
