--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,10 +10,10 @@ categories = ["aerospace", "asynchronous", "embedded", "hardware-support", "no-s
 
 [dependencies]
 embedded-hal-async = { version = "1.0.0", optional = true}
-embedded-hal = {version = "1.0.0", optional = true}
+embedded-hal = {version = "1.0.0" }
 embassy-time = "0.4.0"
 heapless = "0.8.0"
-uom = { version= "0.37.0", default-features = false, features = ["f32", "si"]}
+uom = { version = "0.37.0", default-features = false, features = ["si", "f32"], optional = true }
 
 [dev-dependencies]
 tokio = { version = "1.47.1", features = ["macros", "rt", "time"]}
@@ -22,5 +22,4 @@ tokio-test = "0.4.4"
 [features]
 default = ["async"]
 async = ["dep:embedded-hal-async"]
-sync = ["dep:embedded-hal"]
-
+uom = ["dep:uom"]
